k3s-install/roles/nextcloud/files/nextcloud-ingress.yml
## nextcloud.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "nextcloud" # Same namespace as the deployment
  name: "nextcloud-ingress" # Name of the ingress (see kubectl get ingress -A)
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "nginx-clusterissuer" # Encrypt using the ClusterIssuer deployed while setting up Cert-Manager
    nginx.ingress.kubernetes.io/proxy-body-size:  "50m" # Increase the size of the maximum allowed size of the client request body
spec:
  tls:
  - hosts:
    - "nextcloud.kube.home" # Host to access nextcloud
    secretName: "nextcloud-tls-secret" # Name of the certifciate (see kubectl get certificate -A)
  rules:
  - host: "nextcloud.kube.home" # Host to access nextcloud
    http:
      paths:
        - path: /  # We will access NextCloud via the URL https://nextcloud.<domain.com>/
          pathType: Prefix
          backend:
            service:
              name: "nextcloud" # Mapping to the service (see kubectl get services -n nextcloud)
              port: 
                number: 8080 # Mapping to the port (see kubectl get services -n nextcloud)
---
